# PyFerrum

./: .gitignore  LICENSE  README.md  pyproject.toml
pyferrum/: core.py
rustlib/: Cargo.toml
rustlib/src/: csv_parser.rs  lib.rs
